--- a/FTPMonitoring/packages.config
+++ b/FTPMonitoring/packages.config
@@ -11,6 +11,7 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.7" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="2.1.0" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
+  <package id="Moment.js" version="2.22.2" targetFramework="net461" />
   <package id="Tether.New" version="1.3.3" targetFramework="net461" />
   <package id="toastr" version="2.1.1" targetFramework="net461" />
 </packages>
